# nvim

./: .gitignore  .vimspector.json  README.md  barbar-config.lua  basic.lua  basic.vim  coc-settings.json  colemak.vim  colors.lua  debug.vim  filetypes.lua  filetypes.vim  indent-blankline-config.lua  init.lua  init.vim  init.vim.backup  init.vim.bkup  package-lock.json  plugins.lua  plugins.vim  pyproject.toml  run.lua  run.nvim.vim  run.vim  setup.vim  shortcuts.lua  shortcuts.vim  surround-config.lua  term.lua  term.vim  themes.vim  twitch.vim  ultisnips-config.lua  update_sourcery.sh  wilder-config.lua
.vim/: coc-settings.json
UltiSnips/: markdown.snippets  python.snippets  tex.snippets
lua/: basic.lua  colemak.lua  colors.lua  gitsigns-config.lua  goyo-config.lua  indent-blankline-config.lua  init.lua  kommentary-config.lua  lsp-config.lua  nvim-cmp-config.lua  nvim-tree-config.lua  plugins.lua  run-config.lua  run.lua  setup_pyright.lua  shortcuts.lua  telescope-config.lua  treesitter-config.lua  trouble-config.lua  vim-repeat-config.lua  vimtext-config.lua  wilder-config.lua
plug-config/: airline.vim  barbar.vim  chadtree.vim  coc.vim  codi.vim  dap.vim  fzf.vim  gitsigns.vim  goyo.vim  gutentags.vim  indent-blankline.vim  indentLine.vim  lightspeed.vim  nerdcommenter.vim  nerdtree.vim  numb.nvim.vim  nvim-tree.vim  startify.vim  statusline.vim  surround.vim  tagbar.vim  telescope.vim  tex-conceal.vim  treesitter.vim  ultisnips.vim  vim-cycle.vim  vim-fugitive.vim  vim-repeat.vim  vim-wiki.vim  vimade.vim  vimtex.vim  wilder.vim
plugin/: packer_compiled.lua
(+3 files in other folders)
