[tool.poetry]
name = "nvim"
version = "0.1.0"
description = ""
authors = ["Marco Aguiar <marcoaaguiar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.0"
pynvim = "^0.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
